kong/base/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: kong:networking.k8s.io/Ingress:kong/konga-ssl-ingress
      field.cattle.io/publicEndpoints: '[{"addresses":["95.111.234.12"],"port":443,"protocol":"HTTPS","serviceName":"kong:kong-gateway-kong-manager","ingressName":"kong:konga-ssl-ingress","hostname":"konga.abu7midan.com","path":"/","allNodes":false}]'
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"kong:networking.k8s.io/Ingress:kong/konga-ssl-ingress","field.cattle.io/publicEndpoints":"[{\"addresses\":[\"95.111.234.12\"],\"port\":443,\"protocol\":\"HTTPS\",\"serviceName\":\"kong:kong-gateway-kong-manager\",\"ingressName\":\"kong:konga-ssl-ingress\",\"hostname\":\"konga.abu7midan.com\",\"path\":\"/\",\"allNodes\":false}]","kubernetes.io/ingress.class":"nginx","nginx.in [...]
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
      nginx.ingress.kubernetes.io/proxy-buffers: 4 256k
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-03-14T13:24:03Z"
    generation: 1
    name: konga-ssl-ingress
    namespace: kong
    resourceVersion: "10273216"
    uid: e5401d9f-b4d8-48fe-a9f1-6575e75c82d7
  spec:
    rules:
    - host: konga.abu7midan.com
      http:
        paths:
        - backend:
            service:
              name: kong-gateway-kong-manager
              port:
                number: 8002
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - konga.abu7midan.com
      secretName: konga-tls-secret
  status:
    loadBalancer:
      ingress:
      - ip: 95.111.234.12
kind: List
metadata:
  resourceVersion: ""
