kong/base/konga-ingress-current.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: kong:networking.k8s.io/Ingress:kong/konga-ssl-ingress
    field.cattle.io/publicEndpoints: '[{"addresses":["95.111.234.12"],"port":443,"protocol":"HTTPS","serviceName":"kong:kong-gateway-kong-manager","ingressName":"kong:konga-ssl-ingress","hostname":"konga.abu7midan.com","path":"/","allNodes":false}]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"kong:networking.k8s.io/Ingress:kong/konga-ssl-ingress","field.cattle.io/publicEndpoints":"[{\"addresses\":[\"95.111.234.12\"],\"port\":443,\"protocol\":\"HTTPS\",\"serviceName\":\"kong:kong-gateway-kong-manager\",\"ingressName\":\"kong:konga-ssl-ingress\",\"hostname\":\"konga.abu7midan.com\",\"path\":\"/\",\"allNodes\":false}]","kubernetes.io/ingress.class":"nginx","nginx.ingr [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffers: 4 256k
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2026-03-05T01:07:30Z"
  generation: 1
  name: konga-ssl-ingress
  namespace: kong
  resourceVersion: "7689153"
  uid: 355d454a-0226-454e-87b0-201bcb4845df
spec:
  rules:
  - host: konga.abu7midan.com
    http:
      paths:
      - backend:
          service:
            name: kong-gateway-kong-manager
            port:
              number: 8002
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - konga.abu7midan.com
    secretName: konga-tls-secret
status:
  loadBalancer:
    ingress:
    - ip: 95.111.234.12
