kong/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: "2026-03-03T03:23:57Z"
  labels:
    kubernetes.io/metadata.name: kong
  name: kong
  resourceVersion: "7189561"
  uid: 328857d9-01b7-457a-afc5-17b06743482c
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
