kong/base/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: kong:/Service:kong/kong-kong-admin
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"kong:/Service:kong/kong-kong-admin","meta.helm.sh/release-name":"kong","meta.helm.sh/release-namespace":"kong"},"creationTimestamp":"2026-03-03T03:29:00Z","labels":{"app.kubernetes.io/instance":"kong","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"kong","app.kubernetes.io/version":"3.13","helm.sh/chart":"kong-3.0.2"},"name":"kong-kong-admin","namespace":"kong","resourceVersio [...]
      meta.helm.sh/release-name: kong
      meta.helm.sh/release-namespace: kong
    creationTimestamp: "2026-03-14T13:24:03Z"
    labels:
      app.kubernetes.io/instance: kong
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kong
      app.kubernetes.io/version: "3.13"
      helm.sh/chart: kong-3.0.2
    name: kong-kong-admin
    namespace: kong
    resourceVersion: "10273091"
    uid: ade88c9f-608c-481c-9a12-31f0e4ea81a0
  spec:
    clusterIP: 10.99.56.29
    clusterIPs:
    - 10.99.56.29
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: kong-admin
      nodePort: 31073
      port: 8001
      protocol: TCP
      targetPort: 8001
    - name: kong-admin-tls
      nodePort: 30517
      port: 8444
      protocol: TCP
      targetPort: 8444
    selector:
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: kong
      app.kubernetes.io/name: kong
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: kong:/Service:kong/kong-kong-manager
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"kong:/Service:kong/kong-kong-manager","meta.helm.sh/release-name":"kong","meta.helm.sh/release-namespace":"kong"},"creationTimestamp":"2026-03-03T03:29:00Z","labels":{"app.kubernetes.io/instance":"kong","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"kong","app.kubernetes.io/version":"3.13","helm.sh/chart":"kong-3.0.2"},"name":"kong-kong-manager","namespace":"kong","resourceVe [...]
      meta.helm.sh/release-name: kong
      meta.helm.sh/release-namespace: kong
    creationTimestamp: "2026-03-14T13:24:03Z"
    labels:
      app.kubernetes.io/instance: kong
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kong
      app.kubernetes.io/version: "3.13"
      helm.sh/chart: kong-3.0.2
    name: kong-kong-manager
    namespace: kong
    resourceVersion: "10273086"
    uid: 2c4ff375-c9d1-45f0-b30d-6496b3fafd37
  spec:
    clusterIP: 10.108.6.42
    clusterIPs:
    - 10.108.6.42
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: kong-manager
      nodePort: 31082
      port: 8002
      protocol: TCP
      targetPort: 8002
    - name: kong-manager-tls
      nodePort: 31771
      port: 8445
      protocol: TCP
      targetPort: 8445
    selector:
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: kong
      app.kubernetes.io/name: kong
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: kong:/Service:kong/kong-kong-metrics
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"kong:/Service:kong/kong-kong-metrics","meta.helm.sh/release-name":"kong","meta.helm.sh/release-namespace":"kong"},"creationTimestamp":"2026-03-03T03:29:00Z","labels":{"app.kubernetes.io/instance":"kong","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"kong","app.kubernetes.io/version":"3.13","helm.sh/chart":"kong-3.0.2"},"name":"kong-kong-metrics","namespace":"kong","resourceVe [...]
      meta.helm.sh/release-name: kong
      meta.helm.sh/release-namespace: kong
    creationTimestamp: "2026-03-14T13:24:03Z"
    labels:
      app.kubernetes.io/instance: kong
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kong
      app.kubernetes.io/version: "3.13"
      helm.sh/chart: kong-3.0.2
    name: kong-kong-metrics
    namespace: kong
    resourceVersion: "10273074"
    uid: 60afd2c9-db68-4395-99f5-304458da712d
  spec:
    clusterIP: 10.97.198.244
    clusterIPs:
    - 10.97.198.244
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: cmetrics
      port: 10255
      protocol: TCP
      targetPort: cmetrics
    - name: status
      port: 10254
      protocol: TCP
      targetPort: cstatus
    selector:
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: kong
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kong
      app.kubernetes.io/version: "3.13"
      helm.sh/chart: kong-3.0.2
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: kong:/Service:kong/kong-kong-proxy
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"kong:/Service:kong/kong-kong-proxy","meta.helm.sh/release-name":"kong","meta.helm.sh/release-namespace":"kong"},"creationTimestamp":"2026-03-03T03:29:00Z","labels":{"app.kubernetes.io/instance":"kong","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"kong","app.kubernetes.io/version":"3.13","enable-metrics":"true","helm.sh/chart":"kong-3.0.2"},"name":"kong-kong-proxy","namespace [...]
      meta.helm.sh/release-name: kong
      meta.helm.sh/release-namespace: kong
    creationTimestamp: "2026-03-14T13:24:03Z"
    labels:
      app.kubernetes.io/instance: kong
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kong
      app.kubernetes.io/version: "3.13"
      enable-metrics: "true"
      helm.sh/chart: kong-3.0.2
    name: kong-kong-proxy
    namespace: kong
    resourceVersion: "10273092"
    uid: 8dbdc376-66f0-4dd6-9fce-b287263c2f9f
  spec:
    clusterIP: 10.105.153.74
    clusterIPs:
    - 10.105.153.74
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: kong-proxy
      nodePort: 30400
      port: 80
      protocol: TCP
      targetPort: 8000
    - name: kong-proxy-tls
      nodePort: 32411
      port: 443
      protocol: TCP
      targetPort: 8443
    selector:
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: kong
      app.kubernetes.io/name: kong
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: kong:/Service:kong/kong-kong-validation-webhook
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"kong:/Service:kong/kong-kong-validation-webhook","meta.helm.sh/release-name":"kong","meta.helm.sh/release-namespace":"kong"},"creationTimestamp":"2026-03-03T03:29:00Z","labels":{"app.kubernetes.io/instance":"kong","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"kong","app.kubernetes.io/version":"3.13","helm.sh/chart":"kong-3.0.2"},"name":"kong-kong-validation-webhook","namespa [...]
      meta.helm.sh/release-name: kong
      meta.helm.sh/release-namespace: kong
    creationTimestamp: "2026-03-14T13:24:03Z"
    labels:
      app.kubernetes.io/instance: kong
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kong
      app.kubernetes.io/version: "3.13"
      helm.sh/chart: kong-3.0.2
    name: kong-kong-validation-webhook
    namespace: kong
    resourceVersion: "10273069"
    uid: 3e0cebff-bafc-414e-82e7-b137294dac54
  spec:
    clusterIP: 10.108.112.66
    clusterIPs:
    - 10.108.112.66
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: webhook
      port: 443
      protocol: TCP
      targetPort: webhook
    selector:
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: kong
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kong
      app.kubernetes.io/version: "3.13"
      helm.sh/chart: kong-3.0.2
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: kong:/Service:kong/kong-postgresql
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"kong:/Service:kong/kong-postgresql"},"creationTimestamp":"2026-03-03T03:24:06Z","name":"kong-postgresql","namespace":"kong","resourceVersion":"7189594","uid":"3935b6d2-600a-4340-b4b5-98595a96833f"},"spec":{"clusterIP":"None","clusterIPs":["None"],"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"port":5432,"protocol":"TCP","targetPort":5432}],"s [...]
    creationTimestamp: "2026-03-14T13:24:03Z"
    name: kong-postgresql
    namespace: kong
    resourceVersion: "10273064"
    uid: a644faca-66e0-48e5-81cd-2585fc62fd43
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      app: kong-postgresql
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: kong:/Service:kong/konga
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"kong:/Service:kong/konga"},"creationTimestamp":"2026-03-03T03:33:07Z","name":"konga","namespace":"kong","resourceVersion":"7191548","uid":"492ddd01-39e9-4f4f-be4a-a68bf53cfd35"},"spec":{"clusterIP":"10.109.197.235","clusterIPs":["10.109.197.235"],"externalTrafficPolicy":"Cluster","internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"nodePort":30882, [...]
    creationTimestamp: "2026-03-14T13:24:03Z"
    name: konga
    namespace: kong
    resourceVersion: "10273090"
    uid: 7cb9622b-124f-441a-b8c3-a08589a72f2f
  spec:
    clusterIP: 10.109.197.235
    clusterIPs:
    - 10.109.197.235
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - nodePort: 30882
      port: 1337
      protocol: TCP
      targetPort: 1337
    selector:
      app: konga
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: kong:/Service:kong/konga-mongodb
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"kong:/Service:kong/konga-mongodb"},"creationTimestamp":"2026-03-03T03:32:58Z","name":"konga-mongodb","namespace":"kong","resourceVersion":"7191462","uid":"c391e1b8-e5ad-4e55-97e8-3c03075c5775"},"spec":{"clusterIP":"10.103.51.17","clusterIPs":["10.103.51.17"],"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"port":27017,"protocol":"TCP","targetPo [...]
    creationTimestamp: "2026-03-14T13:24:03Z"
    name: konga-mongodb
    namespace: kong
    resourceVersion: "10273072"
    uid: b27c610a-b14e-4ce3-a019-333eab476c03
  spec:
    clusterIP: 10.103.51.17
    clusterIPs:
    - 10.103.51.17
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
    selector:
      app: konga-mongodb
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
